--- a/package.json
+++ b/package.json
@@ -18,15 +18,43 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "@heavy-duty/wallet-adapter": "^0.7.3",
+    "@ngrx/component-store": "^16.2.0",
+    "@solana/wallet-adapter-base": "^0.9.23",
+    "@solana/wallet-adapter-wallets": "^0.19.23",
+    "@solana/web3.js": "^1.87.6",
+    "@walletconnect/types": "^2.10.5",
+    "assert": "^2.1.0",
+    "axios": "^1.6.2",
+    "browserify-zlib": "^0.2.0",
+    "bs58": "^5.0.0",
+    "buffer": "^6.0.3",
+    "constants-browserify": "^1.0.0",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^4.2.0",
+    "firebase": "^10.6.0",
+    "fs-extra": "^11.1.1",
+    "https-browserify": "^1.0.0",
+    "keccak": "^3.0.4",
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "path-browserify": "^1.0.1",
+    "primeng": "^16.4.2",
     "rxjs": "~7.8.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
     "tslib": "^2.3.0",
+    "url": "^0.11.3",
     "zone.js": "~0.13.0"
   },
   "devDependencies": {
+    "@angular-builders/custom-webpack": "^16.0.0",
     "@angular-devkit/build-angular": "^16.1.0",
     "@angular/cli": "~16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jasmine": "~4.3.0",
+    "@types/keccak": "^3.0.4",
+    "@types/node": "^20.9.1",
+    "@types/readable-stream": "^4.0.6",
     "jasmine-core": "~4.6.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
